--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,18 @@
 {
   "version": 2,
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" }
+    {
+      "src": "api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "maxLambdaSize": "50mb"
+      }
+    }
   ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/api/index.js" }
-  ]
+  "routes": [{ "src": "/(.*)", "dest": "/api/index.js" }],
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 30
+    }
+  }
 }
-
